--- a/module-1/hw1.html
+++ b/module-1/hw1.html
@@ -15,6 +15,7 @@
       </header> 
       </ul>
       <main>
+        <section>
       <article>
         <img src="1.png" alt="жизнь" />
         <p>Lifestyle</p>
