--- a/module-3/hw3.html
+++ b/module-3/hw3.html
@@ -15,8 +15,8 @@
     <link rel="stylesheet" href="style.css" />
     <title>Home work 3</title>
   </head>
-  <body class="wrapper">
-    <header class="page-header">
+  <body >
+    <header class="wrapper">
       <nav>
         <ul class="site-navigation">
           <li class="site-navigation-item"><a href="#">lifestyle</a></li>
@@ -39,7 +39,7 @@
                   width="420"
                   height="280"
                 />
-                <h3 class="article-title">lifestyle</h3>
+                <p class="article-title">lifestyle</p>
                 <h3 class="article-caption">More than just a music fesival</h3>
                 <p class="article-content">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit sed do
@@ -57,7 +57,7 @@
                   alt="lifestyle"
                   width="420"
                 />
-                <h3 class="article-title">Lifestyle</h3>
+                <p class="article-title">Lifestyle</p>
                 <h3 class="article-caption">life tastes better with coffee</h3>
                 <p class="article-content">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit sed do
@@ -75,7 +75,7 @@
                   alt="photodiary"
                   width="420"
                 />
-                <h3 class="article-title">photodiary</h3>
+                <p class="article-title">photodiary</p>
                 <h3 class="article-caption">American dream</h3>
                 <p class="article-content">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit sed do
@@ -93,7 +93,7 @@
                   alt="photodiary"
                   width="420"
                 />
-                <h3 class="article-title">photodiary</h3>
+                <p class="article-title">photodiary</p>
                 <h3 class="article-caption">A day exploring the alps</h3>
                 <p class="article-content">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit sed do
@@ -111,7 +111,7 @@
                   alt="lifestyle"
                   width="420"
                 />
-                <h3 class="article-title">lifestyle</h3>
+                <p class="article-title">lifestyle</p>
                 <h3 class="article-caption">Top 10 songs for running</h3>
                 <p class="article-content">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit sed do
@@ -129,7 +129,7 @@
                   alt="lifestyle"
                   width="420"
                 />
-                <h3 class="article-title">lifestyle</h3>
+                <p class="article-title">lifestyle</p>
                 <h3 class="article-caption">Cold winter days</h3>
                 <p class="article-content">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit sed do
