теги img обернуты в ссылку в блоке FEATURED PRODACTS

--- a/module-4/4.html
+++ b/module-4/4.html
@@ -38,7 +38,7 @@
           <ul class="content-list clearfix">
             <li class="content-list-item">
               <article class="clearfix">
-                <img src="1.jpg" alt="clothes" />
+                <a href=""><img src="1.jpg" alt="clothes" /></a>
                 <div class="description-cart clearfix">
                   <h3 class="subtitle"><a href="">blue Tshirt</a></h3>
 
@@ -49,7 +49,7 @@
 
             <li class="content-list-item">
               <article>
-                <img src="2.jpg" alt="clothes" />
+               <a href=""> <img src="2.jpg" alt="clothes" /></a>
                 <div class="description-cart clearfix">
                   <h3 class="subtitle"><a href="">WOMAN shirt</a></h3>
 
@@ -60,7 +60,7 @@
 
             <li class="content-list-item">
               <article>
-                <img src="3.jpg" alt="clothes" />
+                <a href=""><img src="3.jpg" alt="clothes" /></a>
                 <div class="description-cart clearfix">
                   <h3 class="subtitle"><a href="">YELLOW Tshirt</a></h3>
 
@@ -71,7 +71,7 @@
 
             <li class="content-list-item">
               <article>
-                <img src="4.jpg" alt="clothes" />
+                <a href=""><img src="4.jpg" alt="clothes" /></a>
                 <div class="description-cart clearfix">
                   <h3 class="subtitle"><a href="">Cool lingerie </a></h3>
 
@@ -82,7 +82,7 @@
 
             <li class="content-list-item">
               <article>
-                <img src="5.jpg" alt="clothes" />
+                <a href=""><img src="5.jpg" alt="clothes" /></a>
                 <div class="description-cart clearfix">
                   <h3 class="subtitle"><a href="">blue Tshirt</a></h3>
 
@@ -93,7 +93,7 @@
 
             <li class="content-list-item">
               <article>
-                <img src="6.jpg" alt="clothes" />
+               <a href=""> <img src="6.jpg" alt="clothes" /></a>
                 <div class="description-cart clearfix">
                   <h3 class="subtitle"><a href="">WOMAN shirt</a></h3>
 
@@ -104,7 +104,7 @@
 
             <li class="content-list-item">
               <article>
-                <img src="7.jpg" alt="clothes" />
+                <a href=""><img src="7.jpg" alt="clothes" /></a>
                 <div class="description-cart clearfix">
                   <h3 class="subtitle"><a href="">YELLOW Tshirt</a></h3>
 
@@ -115,7 +115,7 @@
 
             <li class="content-list-item">
               <article>
-                <img src="8.jpg" alt="clothes" />
+               <a href=""><img src="8.jpg" alt="clothes" /></a>
                 <div class="description-cart clearfix">
                   <h3 class="subtitle"><a href="">Cool lingerie</a></h3>
 
@@ -130,7 +130,7 @@
         <ul class="content-list-news clearfix">
           <li class="content-list-item-news">
             <article>
-              <img src="9.jpg" alt="map" />
+             <a href=""> <img src="9.jpg" alt="map" /></a>
               <h4>
                 Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
               </h4>
@@ -145,7 +145,7 @@
 
           <li class="content-list-item-news">
             <article>
-              <img src="10.jpg" alt="map" />
+              <a href=""><img src="10.jpg" alt="map" /></a>
               <h4>
                 Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
               </h4>
@@ -160,7 +160,7 @@
 
           <li class="content-list-item-news">
             <article>
-              <img src="11.jpg" alt="map" />
+              <a href=""><img src="11.jpg" alt="map" /></a>
               <h4>
                 Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
               </h4>
