--- a/module-4/4.html
+++ b/module-4/4.html
@@ -5,20 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <link rel="stylesheet" href="4.css" />
+    <link rel="stylesheet" href="nomalize.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,900&display=swap"
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap"
+      href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="4.css" />
   </head>
   <body>
     <header>
       <div class="container clearfix">
-        <nav>
+        <nav class="clearfix">
           <h1><a class="logotipe" href="#"> mart</a></h1>
           <ul class="site-navigation">
             <li class="site-navigation-item"><a href="#">home</a></li>
@@ -32,148 +33,118 @@
       </div>
     </header>
     <main>
-      <div class="container clearfix">
-        <section>
-          <h2 class="title">featured prodacts</h2>
-          <ul class="content-list clearfix">
-            <li class="content-list-item">
-              <article class="clearfix">
-                <a href=""><img src="1.jpg" alt="clothes" /></a>
-                <div class="description-cart clearfix">
-                  <h3 class="subtitle"><a href="">blue Tshirt</a></h3>
+      <section class="container clearfix">
+        <h2 class="title">featured prodacts</h2>
+        <ul class="content-list clearfix">
+          <li class="content-list-item">
+            <a href=""><img src="1.jpg" alt="clothes"/></a>
+            <div class="description-cart clearfix">
+              <p class="subtitle"><a href="">blue Tshirt</a></p>
+              <p class="description-price"><a href="">$26</a></p>
+            </div>
+          </li>
 
-                  <div class="description-price"><a href="">$26</a></div>
-                </div>
-              </article>
-            </li>
+          <li class="content-list-item">
+            <a href=""> <img src="2.jpg" alt="clothes"/></a>
+            <div class="description-cart clearfix">
+              <p class="subtitle"><a href="">WOMAN shirt</a></p>
+              <p class="description-price"><a href="">$31</a></p>
+            </div>
+          </li>
 
-            <li class="content-list-item">
-              <article>
-               <a href=""> <img src="2.jpg" alt="clothes" /></a>
-                <div class="description-cart clearfix">
-                  <h3 class="subtitle"><a href="">WOMAN shirt</a></h3>
+          <li class="content-list-item">
+            <a href=""><img src="3.jpg" alt="clothes"/></a>
+            <div class="description-cart clearfix">
+              <p class="subtitle"><a href="">YELLOW Tshirt</a></p>
+              <p class="description-price"><a href="">$21</a></p>
+            </div>
+          </li>
 
-                  <div class="description-price"><a href="">$31</a></div>
-                </div>
-              </article>
-            </li>
+          <li class="content-list-item">
+            <a href=""><img src="4.jpg" alt="clothes"/></a>
+            <div class="description-cart clearfix">
+              <p class="subtitle"><a href="">Cool lingerie </a></p>
+              <p class="description-price"><a href="">$56</a></p>
+            </div>
+          </li>
 
-            <li class="content-list-item">
-              <article>
-                <a href=""><img src="3.jpg" alt="clothes" /></a>
-                <div class="description-cart clearfix">
-                  <h3 class="subtitle"><a href="">YELLOW Tshirt</a></h3>
+          <li class="content-list-item">
+            <a href=""><img src="5.jpg" alt="clothes"/></a>
+            <div class="description-cart clearfix">
+              <p class="subtitle"><a href="">blue Tshirt</a></p>
+              <p class="description-price"><a href="">$26</a></p>
+            </div>
+          </li>
 
-                  <div class="description-price"><a href="">$21</a></div>
-                </div>
-              </article>
-            </li>
+          <li class="content-list-item">
+            <a href=""> <img src="6.jpg" alt="clothes"/></a>
+            <div class="description-cart clearfix">
+              <p class="subtitle"><a href="">WOMAN shirt</a></p>
+              <p class="description-price"><a href="">$31</a></p>
+            </div>
+          </li>
 
-            <li class="content-list-item">
-              <article>
-                <a href=""><img src="4.jpg" alt="clothes" /></a>
-                <div class="description-cart clearfix">
-                  <h3 class="subtitle"><a href="">Cool lingerie </a></h3>
+          <li class="content-list-item">
+            <a href=""><img src="7.jpg" alt="clothes"/></a>
+            <div class="description-cart clearfix">
+              <p class="subtitle"><a href="">YELLOW Tshirt</a></p>
+              <p class="description-price"><a href="">$21</a></p>
+            </div>
+          </li>
 
-                  <div class="description-price"><a href="">$56</a></div>
-                </div>
-              </article>
-            </li>
+          <li class="content-list-item">
+            <a href=""><img src="8.jpg" alt="clothes"/></a>
+            <div class="description-cart clearfix">
+              <p class="subtitle"><a href="">Cool lingerie</a></p>
+              <p class="description-price"><a href="">$56</a></p>
+            </div>
+          </li>
+        </ul>
+      </section>
 
-            <li class="content-list-item">
-              <article>
-                <a href=""><img src="5.jpg" alt="clothes" /></a>
-                <div class="description-cart clearfix">
-                  <h3 class="subtitle"><a href="">blue Tshirt</a></h3>
-
-                  <div class="description-price"><a href="">$26</a></div>
-                </div>
-              </article>
-            </li>
-
-            <li class="content-list-item">
-              <article>
-               <a href=""> <img src="6.jpg" alt="clothes" /></a>
-                <div class="description-cart clearfix">
-                  <h3 class="subtitle"><a href="">WOMAN shirt</a></h3>
-
-                  <div class="description-price"><a href="">$31</a></div>
-                </div>
-              </article>
-            </li>
-
-            <li class="content-list-item">
-              <article>
-                <a href=""><img src="7.jpg" alt="clothes" /></a>
-                <div class="description-cart clearfix">
-                  <h3 class="subtitle"><a href="">YELLOW Tshirt</a></h3>
-
-                  <div class="description-price"><a href="">$21</a></div>
-                </div>
-              </article>
-            </li>
-
-            <li class="content-list-item">
-              <article>
-               <a href=""><img src="8.jpg" alt="clothes" /></a>
-                <div class="description-cart clearfix">
-                  <h3 class="subtitle"><a href="">Cool lingerie</a></h3>
-
-                  <div class="description-price"><a href="">$56</a></div>
-                </div>
-              </article>
-            </li>
-          </ul>
-        </section>
-
+      <section class="container clearfix">
         <h2 class="caption">LATEST NEWS</h2>
         <ul class="content-list-news clearfix">
           <li class="content-list-item-news">
-            <article>
-             <a href=""> <img src="9.jpg" alt="map" /></a>
-              <h4>
-                Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
-              </h4>
-              <p class="news-description">
-                Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
-                vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
-                Nam nec tellus a odio
-              </p>
-              <a class="more" href="#"> Read More</a>
-            </article>
+            <img src="9.jpg" alt="map" />
+            <h3>
+              Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
+            </h3>
+            <p class="news-description">
+              Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
+              vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
+              Nam nec tellus a odio
+            </p>
+            <a class="more" href="#"> Read More</a>
           </li>
 
           <li class="content-list-item-news">
-            <article>
-              <a href=""><img src="10.jpg" alt="map" /></a>
-              <h4>
-                Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
-              </h4>
-              <p class="news-description">
-                Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
-                vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
-                Nam nec tellus a odio
-              </p>
-              <a class="more" href="#"> Read More</a>
-            </article>
+            <img src="10.jpg" alt="map" />
+            <h3>
+              Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
+            </h3>
+            <p class="news-description">
+              Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
+              vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
+              Nam nec tellus a odio
+            </p>
+            <a class="more" href="#"> Read More</a>
           </li>
 
           <li class="content-list-item-news">
-            <article>
-              <a href=""><img src="11.jpg" alt="map" /></a>
-              <h4>
-                Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
-              </h4>
-              <p class="news-description">
-                Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
-                vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
-                Nam nec tellus a odio
-              </p>
-              <a class="more" href="#"> Read More</a>
-            </article>
+            <img src="11.jpg" alt="map" />
+            <h3>
+              Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
+            </h3>
+            <p class="news-description">
+              Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
+              vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
+              Nam nec tellus a odio
+            </p>
+            <a class="more" href="#"> Read More</a>
           </li>
         </ul>
-      </div>
+      </section>
     </main>
   </body>
 </html>
