--- a/module-4/4.html
+++ b/module-4/4.html
@@ -33,117 +33,121 @@
       </div>
     </header>
     <main>
-      <section class="container clearfix">
-        <h2 class="title">featured prodacts</h2>
-        <ul class="content-list clearfix">
-          <li class="content-list-item">
-            <a href=""><img src="1.jpg" alt="clothes"/></a>
-            <div class="description-cart clearfix">
-              <p class="subtitle"><a href="">blue Tshirt</a></p>
-              <p class="description-price"><a href="">$26</a></p>
-            </div>
-          </li>
+      <section>
+        <div class="container clearfix">
+          <h2 class="title">featured prodacts</h2>
+          <ul class="content-list clearfix">
+            <li class="content-list-item">
+              <a href=""><img src="1.jpg" alt="clothes"/></a>
+              <div class="description-cart clearfix">
+                <p class="subtitle"><a href="">blue Tshirt</a></p>
+                <p class="description-price"><a href="">$26</a></p>
+              </div>
+            </li>
 
-          <li class="content-list-item">
-            <a href=""> <img src="2.jpg" alt="clothes"/></a>
-            <div class="description-cart clearfix">
-              <p class="subtitle"><a href="">WOMAN shirt</a></p>
-              <p class="description-price"><a href="">$31</a></p>
-            </div>
-          </li>
+            <li class="content-list-item">
+              <a href=""> <img src="2.jpg" alt="clothes"/></a>
+              <div class="description-cart clearfix">
+                <p class="subtitle"><a href="">WOMAN shirt</a></p>
+                <p class="description-price"><a href="">$31</a></p>
+              </div>
+            </li>
 
-          <li class="content-list-item">
-            <a href=""><img src="3.jpg" alt="clothes"/></a>
-            <div class="description-cart clearfix">
-              <p class="subtitle"><a href="">YELLOW Tshirt</a></p>
-              <p class="description-price"><a href="">$21</a></p>
-            </div>
-          </li>
+            <li class="content-list-item">
+              <a href=""><img src="3.jpg" alt="clothes"/></a>
+              <div class="description-cart clearfix">
+                <p class="subtitle"><a href="">YELLOW Tshirt</a></p>
+                <p class="description-price"><a href="">$21</a></p>
+              </div>
+            </li>
 
-          <li class="content-list-item">
-            <a href=""><img src="4.jpg" alt="clothes"/></a>
-            <div class="description-cart clearfix">
-              <p class="subtitle"><a href="">Cool lingerie </a></p>
-              <p class="description-price"><a href="">$56</a></p>
-            </div>
-          </li>
+            <li class="content-list-item">
+              <a href=""><img src="4.jpg" alt="clothes"/></a>
+              <div class="description-cart clearfix">
+                <p class="subtitle"><a href="">Cool lingerie </a></p>
+                <p class="description-price"><a href="">$56</a></p>
+              </div>
+            </li>
 
-          <li class="content-list-item">
-            <a href=""><img src="5.jpg" alt="clothes"/></a>
-            <div class="description-cart clearfix">
-              <p class="subtitle"><a href="">blue Tshirt</a></p>
-              <p class="description-price"><a href="">$26</a></p>
-            </div>
-          </li>
+            <li class="content-list-item">
+              <a href=""><img src="5.jpg" alt="clothes"/></a>
+              <div class="description-cart clearfix">
+                <p class="subtitle"><a href="">blue Tshirt</a></p>
+                <p class="description-price"><a href="">$26</a></p>
+              </div>
+            </li>
 
-          <li class="content-list-item">
-            <a href=""> <img src="6.jpg" alt="clothes"/></a>
-            <div class="description-cart clearfix">
-              <p class="subtitle"><a href="">WOMAN shirt</a></p>
-              <p class="description-price"><a href="">$31</a></p>
-            </div>
-          </li>
+            <li class="content-list-item">
+              <a href=""> <img src="6.jpg" alt="clothes"/></a>
+              <div class="description-cart clearfix">
+                <p class="subtitle"><a href="">WOMAN shirt</a></p>
+                <p class="description-price"><a href="">$31</a></p>
+              </div>
+            </li>
 
-          <li class="content-list-item">
-            <a href=""><img src="7.jpg" alt="clothes"/></a>
-            <div class="description-cart clearfix">
-              <p class="subtitle"><a href="">YELLOW Tshirt</a></p>
-              <p class="description-price"><a href="">$21</a></p>
-            </div>
-          </li>
+            <li class="content-list-item">
+              <a href=""><img src="7.jpg" alt="clothes"/></a>
+              <div class="description-cart clearfix">
+                <p class="subtitle"><a href="">YELLOW Tshirt</a></p>
+                <p class="description-price"><a href="">$21</a></p>
+              </div>
+            </li>
 
-          <li class="content-list-item">
-            <a href=""><img src="8.jpg" alt="clothes"/></a>
-            <div class="description-cart clearfix">
-              <p class="subtitle"><a href="">Cool lingerie</a></p>
-              <p class="description-price"><a href="">$56</a></p>
-            </div>
-          </li>
-        </ul>
+            <li class="content-list-item">
+              <a href=""><img src="8.jpg" alt="clothes"/></a>
+              <div class="description-cart clearfix">
+                <p class="subtitle"><a href="">Cool lingerie</a></p>
+                <p class="description-price"><a href="">$56</a></p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
 
-      <section class="container clearfix">
-        <h2 class="caption">LATEST NEWS</h2>
-        <ul class="content-list-news clearfix">
-          <li class="content-list-item-news">
-            <img src="9.jpg" alt="map" />
-            <h3>
-              Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
-            </h3>
-            <p class="news-description">
-              Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
-              vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
-              Nam nec tellus a odio
-            </p>
-            <a class="more" href="#"> Read More</a>
-          </li>
+      <section >
+        <div class="container clearfix">
+          <h2 class="caption">LATEST NEWS</h2>
+          <ul class="content-list-news clearfix">
+            <li class="content-list-item-news">
+              <img class="picture" src="9.jpg" alt="map" />
+              <h3 class="headline">
+                Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
+              </h3>
+              <p class="news-description">
+                Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
+                vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
+                Nam nec tellus a odio
+              </p>
+              <a class="more" href="#"> Read More</a>
+            </li>
 
-          <li class="content-list-item-news">
-            <img src="10.jpg" alt="map" />
-            <h3>
-              Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
-            </h3>
-            <p class="news-description">
-              Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
-              vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
-              Nam nec tellus a odio
-            </p>
-            <a class="more" href="#"> Read More</a>
-          </li>
+            <li class="content-list-item-news">
+              <img class="picture" src="10.jpg" alt="map" />
+              <h3 class="headline">
+                Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
+              </h3>
+              <p class="news-description">
+                Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
+                vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
+                Nam nec tellus a odio
+              </p>
+              <a class="more" href="#"> Read More</a>
+            </li>
 
-          <li class="content-list-item-news">
-            <img src="11.jpg" alt="map" />
-            <h3>
-              Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
-            </h3>
-            <p class="news-description">
-              Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
-              vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
-              Nam nec tellus a odio
-            </p>
-            <a class="more" href="#"> Read More</a>
-          </li>
-        </ul>
+            <li class="content-list-item-news">
+              <img class="picture" src="11.jpg" alt="map" />
+              <h3 class="headline">
+                Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
+              </h3>
+              <p class="news-description">
+                Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
+                vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
+                Nam nec tellus a odio
+              </p>
+              <a class="more" href="#"> Read More</a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
   </body>
