--- a/module-5/hw5.html
+++ b/module-5/hw5.html
@@ -17,8 +17,8 @@
   </head>
   <body>
     <header>
-      <div class="container clearfix">
-        <nav>
+      <div class="container">
+        <nav class="clearfix">
           <h1 class="logotipe"><a href="">mart</a></h1>
           <ul class="site-navigation">
             <li class="site-navigation-item"><a href="">home</a></li>
@@ -31,90 +31,135 @@
         </nav>
       </div>
     </header>
-  <main>
-    <section class="background">
-        <div class="wrapper"> 
+    <main>
+      <section class="background">
+        <div class="container preview">
           <div class="wrapper-container">
             <h2>AFFORDABLE PARIS TOURS</h2>
             <p>CITY TOURS / TOUR TICKETS / TOUR GUIDES</p>
           </div>
-        <div btn-wrapper>
-           <button class="btn-left"></button>
-           <button class="btn-right"></button>
-        </div></div>
-  </section>
-  <section class="collection">
-       <h3>NEW COLLECTION</h3> 
-      <ul class="container-collection">
-        <li class="collection-item">
-          <article class="clearfix">
-            <img src="5.jpg" alt="clothes"/>
+          <div>
+            <button class="btn-left btn-overlay"></button>
+            <button class="btn-right"></button>
+          </div>
+        </div>
+      </section>
+      <section class="collection">
+        <h3>NEW COLLECTION</h3>
+        <ul class="container-collection clearfix">
+          <li class="collection-item">
+            <article class="clearfix">
+              <img src="./images/5.jpg" alt="clothes" />
               <div class="overlay">
                 <ul class="btn-collection clearfix">
-                  <li> <button class="btn-heart item" type="button"></button></li>
-                  <li> <button class="btn-arrow item" type="button"></button></li>
-                  <li> <button class="btn-clock item" type="button"></button></li>
-                  <li> <button class="btn-cart item" type="button"> add to cart</button></li>
-               </ul>
-             </div> 
+                  <li>
+                    <button class="item btn-heart" type="button"></button>
+                  </li>
+                  <li>
+                    <button class="btn-arrow item" type="button"></button>
+                  </li>
+                  <li>
+                    <button class="item btn-clock" type="button"></button>
+                  </li>
+                  <li>
+                    <button class="item btn-cart" type="button">
+                      add to cart
+                    </button>
+                  </li>
+                </ul>
+              </div>
               <div class="description-cart clearfix">
                 <h4><a href="">blue Tshirt</a></h4>
                 <p class="description-price">$26</p>
               </div>
-          </article>
+            </article>
           </li>
           <li class="collection-item">
-              <article class="clearfix">
-                <img src="2.jpg" alt="clothes"/>
-                  <div class="overlay">
-                    <ul class="btn-collection clearfix">
-                      <li> <button class="btn-heart item" type="button"></button></li>
-                      <li> <button class="btn-arrow item" type="button"></button></li>
-                      <li> <button class="btn-clock item" type="button"></button></li>
-                      <li> <button class="btn-cart item" type="button"> add to cart</button></li>
-                   </ul>
-                 </div> 
-                  <div class="description-cart clearfix">
-                    <h4><a href="">blue Tshirt</a></h4>
-                    <p class="description-price">$26</p>
-                  </div>
-              </article>
-              </li>
-              <li class="collection-item">
-                  <article class="clearfix">
-                    <img src="3.jpg" alt="clothes"/>
-                      <div class="overlay">
-                        <ul class="btn-collection clearfix">
-                          <li> <button class="btn-heart item" type="button"></button></li>
-                          <li> <button class="btn-arrow item" type="button"></button></li>
-                          <li> <button class="btn-clock item" type="button"></button></li>
-                          <li> <button class="btn-cart item" type="button"> add to cart</button></li>
-                       </ul>
-                     </div> 
-                      <div class="description-cart clearfix">
-                        <h4><a href="">blue Tshirt</a></h4>
-                        <p class="description-price">$26</p>
-                      </div>
-                  </article>
+            <article class="clearfix">
+              <img src="./images/2.jpg" alt="clothes" />
+              <div class="overlay">
+                <ul class="btn-collection clearfix">
+                  <li>
+                    <button class="btn-heart item" type="button"></button>
                   </li>
-                  <li class="collection-item">
-                      <article class="clearfix">
-                        <img src="4.jpg" alt="clothes"/>
-                          <div class="overlay">
-                            <ul class="btn-collection clearfix">
-                              <li> <button class="btn-heart item" type="button"></button></li>
-                              <li> <button class="btn-arrow item" type="button"></button></li>
-                              <li> <button class="btn-clock item" type="button"></button></li>
-                              <li> <button class="btn-cart item" type="button"> add to cart</button></li>
-                           </ul>
-                         </div> 
-                            <div class="description-cart clearfix">
-                    <h4><a href="">blue Tshirt</a></h4>
-              <p class="description-price">$26</p>
-         </div>
-        </article>
-      </li>
-      </ul>
+                  <li>
+                    <button class="btn-arrow item" type="button"></button>
+                  </li>
+                  <li>
+                    <button class="btn-clock item" type="button"></button>
+                  </li>
+                  <li>
+                    <button class="btn-cart item" type="button">
+                      add to cart
+                    </button>
+                  </li>
+                </ul>
+              </div>
+              <div class="description-cart clearfix">
+                <h4><a href="">blue Tshirt</a></h4>
+                <p class="description-price">$26</p>
+              </div>
+            </article>
+          </li>
+          <li class="collection-item">
+            <article class="clearfix">
+              <img src="./images/3.jpg" alt="clothes" />
+              <div class="overlay">
+                <ul class="btn-collection clearfix">
+                  <li>
+                    <button class="btn-heart item" type="button"></button>
+                  </li>
+                  <li>
+                    <button class="btn-arrow item" type="button"></button>
+                  </li>
+                  <li>
+                    <button class="btn-clock item" type="button"></button>
+                  </li>
+                  <li>
+                    <button class="btn-cart item" type="button">
+                      add to cart
+                    </button>
+                  </li>
+                </ul>
+              </div>
+              <div class="description-cart clearfix">
+                <h4><a href="">blue Tshirt</a></h4>
+                <p class="description-price">$26</p>
+              </div>
+            </article>
+          </li>
+          <li class="collection-item">
+            <article class="clearfix">
+              <img src="./images/4.jpg" alt="clothes" />
+              <div class="overlay">
+                <ul class="btn-collection clearfix">
+                  <li>
+                    <button class="btn-heart item" type="button"></button>
+                  </li>
+                  <li>
+                    <button class="btn-arrow item" type="button"></button>
+                  </li>
+                  <li>
+                    <button class="btn-clock item" type="button"></button>
+                  </li>
+                  <li>
+                    <button class="btn-cart item" type="button">
+                      add to cart
+                    </button>
+                  </li>
+                </ul>
+              </div>
+              <div class="description-cart clearfix">
+                <h4><a href="">blue Tshirt</a></h4>
+                <p class="description-price">$26</p>
+              </div>
+            </article>
+          </li>
+        </ul>
+      </section>
     </main>
+    <footer>
+      <p class="footer"> <a href="">All Rights Reserved © Dokan | Designed ThemenGraph</a></p>
+    </footer>
   </body>
 </html>
